--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "./",
     "paths": {
-      "@src/*":["src/*"]
+      "src/*":["src/*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
